@@ -42,7 +42,7 @@ import java.util.StringTokenizer;
  */
 public class StringEncoder {
 
-	private static final StringEncoder defaultInstance = new StringEncoder();
+	private static StringEncoder defaultInstance = new StringEncoder();
 
 	public static String encodeBoolean(boolean aBoolean) {
 		return aBoolean ? "true" : "false";
@@ -216,6 +216,11 @@ public class StringEncoder {
 		defaultInstance._initialize();
 	}
 
+	public static void reset() {
+		defaultInstance = new StringEncoder();
+		defaultInstance._initialize();
+	}
+
 	/**
 	 * Abstract class defining a converter to and from a String for a given class
 	 * 
@@ -299,7 +304,7 @@ public class StringEncoder {
 
 		@Override
 		public Boolean convertFromString(String value) {
-			return new Boolean(value.equalsIgnoreCase("true") || value.equalsIgnoreCase("yes"));
+			return Boolean.valueOf(value.equalsIgnoreCase("true") || value.equalsIgnoreCase("yes"));
 		}
 
 		@Override
@@ -370,7 +375,7 @@ public class StringEncoder {
 
 		@Override
 		public Integer convertFromString(String value) {
-			return new Integer(value);
+			return Integer.valueOf(value);
 		}
 
 		@Override
@@ -393,7 +398,7 @@ public class StringEncoder {
 
 		@Override
 		public Short convertFromString(String value) {
-			return new Short(value);
+			return Short.valueOf(value);
 		}
 
 		@Override
@@ -416,7 +421,7 @@ public class StringEncoder {
 
 		@Override
 		public Long convertFromString(String value) {
-			return new Long(value);
+			return Long.valueOf(value);
 		}
 
 		@Override
@@ -439,7 +444,7 @@ public class StringEncoder {
 
 		@Override
 		public Float convertFromString(String value) {
-			return new Float(value);
+			return Float.valueOf(value);
 		}
 
 		@Override
@@ -462,7 +467,7 @@ public class StringEncoder {
 
 		@Override
 		public Double convertFromString(String value) {
-			return new Double(value);
+			return Double.valueOf(value);
 		}
 
 		@Override
@@ -639,7 +644,7 @@ public class StringEncoder {
 		}
 
 		@Override
-		public Class convertFromString(String value) {
+		public Class<?> convertFromString(String value) {
 			if (value == null || value.isEmpty()) {
 				return null;
 			}
@@ -849,9 +854,23 @@ public class StringEncoder {
 	 * Hereunder are all the non-static elements of this class. Only those should be used.
 	 */
 
-	private Hashtable<Class, Converter> converters = new Hashtable<Class, Converter>();
+	private Hashtable<Class<?>, Converter<?>> converters = new Hashtable<Class<?>, Converter<?>>();
 
 	private boolean isInitialized = false;
+
+	private StringEncoder delegate;
+
+	public StringEncoder() {
+	}
+
+	public StringEncoder(StringEncoder delegate, Converter<?>... converters) {
+		super();
+		this.delegate = delegate;
+		for (Converter<?> converter : converters) {
+			_addConverter(converter);
+		}
+		isInitialized = true;
+	}
 
 	@SuppressWarnings("unchecked")
 	public <T> T _decodeObject(String value, Class<T> objectType) {
@@ -883,7 +902,7 @@ public class StringEncoder {
 		if (object == null) {
 			return null;
 		}
-		Converter converter = _converterForClass(object.getClass());
+		Converter<T> converter = (Converter<T>) _converterForClass(object.getClass());
 		if (converter != null) {
 			return converter.convertToString(object);
 		} else {
@@ -895,7 +914,7 @@ public class StringEncoder {
 					return converter.convertToString(object);
 				}
 			} else if (object instanceof Enum) {
-				return ((Enum) object).name();
+				return ((Enum<?>) object).name();
 			}
 			throw new InvalidDataException("Supplied value has no converter for type " + object.getClass().getName());
 		}
@@ -912,17 +931,19 @@ public class StringEncoder {
 		 * (Converter)converters.get(key); System.out.println ("Key: "+key+"
 		 * Converter: "+converter.getConverterClass().getName()); }
 		 */
-		Converter returned;
-		Class tryThis = objectType;
-		boolean iAmAtTheTop = false;
+		Converter<?> returned;
+		Class<? super T> tryThis = objectType;
 		do {
 			returned = converters.get(tryThis);
-			iAmAtTheTop = tryThis.equals(Object.class);
-			if (!iAmAtTheTop) {
-				tryThis = tryThis.getSuperclass();
+			if (tryThis.equals(Object.class)) {
+				break;
 			}
-		} while (returned == null && !iAmAtTheTop && tryThis != null);
-		return returned;
+			tryThis = tryThis.getSuperclass();
+		} while (returned == null && tryThis != null);
+		if (returned == null && delegate != null) {
+			return delegate._converterForClass(objectType);
+		}
+		return (Converter<T>) returned;
 	}
 
 	public <T> boolean _isConvertable(Class<T> objectType) {
@@ -965,7 +986,7 @@ public class StringEncoder {
 	/**
 	 * @param converter
 	 */
-	public void _removeConverter(Converter converter) {
+	public void _removeConverter(Converter<?> converter) {
 		converters.remove(converter.getConverterClass());
 	}
 
